<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <Button
        android:id="@+id/image_picker_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/req_local"
        tools:text="Request local image"/>

    <Button
        android:id="@+id/image_picker_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/inner_margins"
        android:text="@string/req_camera"
        app:layout_constraintTop_toBottomOf="@+id/image_picker_local"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Request camera image"/>

    <EditText
        android:id="@+id/image_picker_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/inner_margins"
        android:hint="@string/input_url"
        android:inputType="textWebEmailAddress|textMultiLine"
        android:maxWidth="160dp"
        app:layout_constraintTop_toBottomOf="@+id/image_picker_camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/image_picker_ok"
        tools:ignore="Autofill"/>

    <Button
        android:id="@+id/image_picker_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/image_picker_camera"
        app:layout_constraintStart_toEndOf="@id/image_picker_address"
        app:layout_constraintBaseline_toBaselineOf="@+id/image_picker_address"
        android:text="@string/req_url_ok"
        tools:text="Ok"/>

</androidx.constraintlayout.widget.ConstraintLayout>